welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lenght is not a member of Array[Int]
  for (i <- 0 to nums.lenght-1) {
                      ^indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
      return
      ^